--- a/style.css
+++ b/style.css
@@ -3,96 +3,116 @@
     padding: 0;
 }
 body{
-    background-color: white;
+    background-color: whitesmoke;
 }
-.web{
-    display: flex;
-}
-.h1{
+.icons{
+    margin-left: 78%;
+    margin-top: -46px;
+    font-size: 280%;
     color: white;
 }
-.h2{
-    color: yellow;
+.user1{
+    background-color: yellow;
+    height: 3vh;
+}
+
+.web{
+    background-color: black;
+    height: 10vh;
+    margin-top: 0%;
+}
+nav ul li{
+    list-style-type: none;
+    display: inline-block;
+    padding: 10px 20px;
+    color: white;
+    margin-top: 5px;
 }
 .nav-bar{
-    background-color: black;
-    width: 100%;
-    height: 90px;
-    display: flex; 
-    align-items: center; 
-}
-.nav-bar nav ul {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-}
-.nav-bar nav ul li{
-    color: white;
-    display: flex;
-    justify-content:space-between;
-    gap: 3%;
-}
-.btn{
-    background-color: yellow;
-    border-radius: 5px;
-    color: black;
-}
-.H3{
-    display: flex;
-    /* justify-content: space-between; */
-    gap: 3%;
-    margin-left: 14%;
-}
-.img2{
-    margin-left:0;
-    border: solid;
-    width: 2%;
+text-align: center;
+font-size: 47px;
 
 }
-.pp{
-    border: solid;
-    border-radius: 6%;
+.h2{
+color: yellow;
 }
-.search{
-    border: solid;
-    border-radius: 5%;
+.h1{
+margin-left: 30px;
+color: white;
+margin-top: -3%;
+font-size: 350%;
+}
+.nbar{
+    margin-top: 30px;
+    margin-left: 450px;
+    font-size: 150%;
+}
+#category{
+    height: 45px;
+    width: 160px;
+    font-weight: bolder;
+    border-radius: 5px;
+}
+#search{
+    height: 45px;
+    width: 340px;
+    background-color: whitesmoke;
+    border-radius: 5px;
 }
 .gad{
-    margin-left: 14%;
+    margin-left: 34%;
+    margin-top: 3%;
    
 }
 .our{
     font-weight: bold;
-    font-size: 167%;
-    margin-top: -21%;
+    font-size: 387%;
+    margin-top: -12%;
     margin-left: 15%;
 }
 .else{
-    margin-left: 14.5%;
+    margin-left: 10%;
+    font-size: 170%;
 }
 .btn2{
     background-color: yellow;
     color: black;
     border: solid;
     margin-left: 15%;
-    /* margin-bottom: 3%; */
+    margin-top: 2.9%;
 }
 .ex{
     border: solid white;
     margin-left: 21%;
-    margin-top: -1.4%;
+    width: 8%;
+   margin-top: -2%;
 }
 .accessories{
-    display: flex;
     align-items: center;
-    margin-top: 18%;
-    margin-left: 13%;
+    margin-top: 9%;
+    margin-left: 8%;
+    font-size: 50%;
 }
-.section{
+.deals{
+    font-size: 60px;
     display: flex;
-    margin: 6%;
-    justify-content: space-between;
-    background-color: gainsboro;
+    margin-left: 9%;
+    margin-top: 7%;
+}
+.offer{
+    font-size: 70px;
+    margin-left: 14%;
+    margin-bottom: 3%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.p{
+    margin-left: 12%;
+    margin-top: 1.2%;
+}
+#button2{
+    height: 30px;
+    background-color: black;
+    color: yellow;
 }
 .pn{
     color: black;
@@ -102,22 +122,189 @@ body{
    align-items: center;
    justify-content: space-between;
    margin: 5%;
+   text-align: center;
+   border-radius: 5px;
+   margin-bottom: 1%;
+   gap: 4%;
+  
   
 }
 .images2{
     display: flex;
     justify-content: space-between;
     margin: 5%;
+    gap: 4%;
    
 
 }
-.products{
+.drone{
+    border: solid whitesmoke;
+    height: 40vh;
+    width: 25%;
+    text-align: center;
+
+}
+.pro{
+    border: solid whitesmoke;
+    height: 40vh;
+    width: 25%;
+    text-align: center;
+
+}
+.game{
+    border: solid whitesmoke;
+    height: 40vh;
+    width: 25%;
+    text-align: center;
+}
+.logitech{
+    border: solid whitesmoke;
+    height: 40vh;
+    width: 25%;
+    text-align: center;
+    
+}
+.products1{
     display: flex;
-    margin: 10%;
-    gap: 6%;
-    /* justify-content: space-between; */
+    gap: 4%;
+    margin-left: 6%;
 }
 .p3{
     margin: 9%;
     margin-left: 14%;
+    background-color: rgb(196, 176, 214);
+    height: 50vh;
+    padding-top: 7%;
+    font-size: 187%;
+    
+}
+.paj{
+    margin-top: 9%;
+    margin-left: 5%;
+    font-size: 178%;
+}
+.para{
+   
+    background-color: lightblue;
+    width: 90%;
+    height: 70vh;
+    margin-top: 5%;
+    margin-left: 6%;
+}
+.test{
+
+    margin-top: 3%;
+    margin-left: -15%;
+}
+.lon{
+    font-weight: bold;
+    margin-left: 44%;
+    font-size: 795%;
+    margin-top: -5%;
+}
+.amet{
+    margin-left: 43%;
+    font-size: 256%;
+}
+.cod{
+    margin-left: 15%;
+    margin-top: 7%;
+    font-size: 145%;
+}
+.opk{
+    margin-left: 36%;
+    margin-top: -9%;
+}
+.lko{
+    font-size: 138%;
+}
+.lp
+{
+    font-weight: bolder;
+}
+.name3{
+    margin-left: 11%;
+    font-size: 185%;
+}
+.fot{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 6%;
+    margin-top: 6%;
+    margin: 6%;
+    font-size: 265%;
+    
+}
+.pa{
+    font-weight: bolder;
+}
+.email{
+    background-color: yellow;
+    width: 27%;
+}
+
+.footer{
+    display: flex;
+    margin-top: 3%;
+    justify-content: space-between;
+    margin-left: 3%;
+    background-color: black;
+    color: white;
+    align-self: self-start;
+    font-size: 176%;
+}
+.gadk{
+    color: yellow;
+}
+.pr{
+    font-weight: bold;
+    font-size: 145%;
+}
+.imgs{
+    margin-left: 63%;
+    margin-top: -18%;
+    width: 680px;
+   
+}
+.ye{
+    background-color: yellow;
+    height: 10%;
+    width: 53%;
+    border: solid;
+    text-align: center;
+    margin-left: 15%;
+}
+.items{
+    border: solid whitesmoke;
+    height: 35vh;
+    width: 25%;
+}
+.spe{
+    border: solid whitesmoke;
+    height: 40vh;
+    width: 25%;
+}
+.cc{
+    border: solid whitesmoke;
+    height: 40vh;
+    width: 25%;
+
+}
+.air{
+    border: solid whitesmoke;
+    height: 40vh;
+    width: 25%;
+}
+.any{
+    border-radius: 5px;
+    margin-bottom: 1%;
+    margin: 2%;
+
+
+}
+#products{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+
 }
